--- a/DockerSample/mysql/Dockerfile
+++ b/DockerSample/mysql/Dockerfile
@@ -13,10 +13,10 @@ RUN apt-get install -y mysql-server mysql-client
 
 # RUN chmod 644 /etc/mysql/conf.d/mysql.cnf
 RUN chmod 644 /etc/mysql/mysql.conf.d/mysqld.cnf
-COPY ./mysqld.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
+COPY ./mysql/mysqld.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
 # RUN chmod -R 770 /var/lib/mysql
 # RUN chgrp -R mysql /var/lib/mysql
-COPY ./mysql/sqlfile ./sqlfile
+COPY ./mysql/sqlfiles ./sqlfiles
 # COPY ./mysql.cnf /etc/mysql/conf.d/mysql.cnf
 # COPY ./mysql.cnf /etc/mysql/mysql.conf.d/mysql.cnf
 
