--- a/DockerSample/docker-compose.yml
+++ b/DockerSample/docker-compose.yml
@@ -7,35 +7,25 @@ services:
       dockerfile: ./mysql/Dockerfile
     
     container_name: sample_kifu_mysql
-    # env_file: 
-    #   - ./mysql/mysql_env
-    # environment:
-    #   - MYSQL_ROOT_PASSWORD=root
-    #   - MYSQL_USER=motoo
-    #   - MYSQL_PASSWORD=root
-    environment:
-      MYSQL_ROOT_PASSWORD: root 
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_DATABASE: kifu6
-      
+    
+    env_file: 
+      - ./mysql/mysql_env      
+    
     volumes:
       - ./reflect/db:/var/lib/mysql
- 
+
     expose:
       - 3306:3306
+    
     tty: true
-
-    # entrypoint: 
-    #   - "mysqld" 
-    #   - "-g" 
-    #   - "demon off;"
 
   # Tomcat
   tomcat:
     build: 
       dockerfile: ./tomcat/Dockerfile
+
     container_name: sample_kifu_tomcat
+    
     ports:
       - 8080:8080
     
