--- a/DockerSample/mysql/my.cnf
+++ b/DockerSample/mysql/my.cnf
@@ -1,5 +1,6 @@
-[mysql]
-default-character-set=utf8
-
 [mysqld]
-character-set-server=utf8
+character-set-server=utf8mb4
+collation-server=utf8mb4_general_ci
+
+[client]
+default-character-set=utf8mb4
